added group move method to swagger
